// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expand cell component renders correctly when expanded 1`] = `
<div
  aria-sort={null}
  className="MuiTableCell-root test-class MuiTableCell-body"
>
  <WithStyles(ForwardRef(IconButton))
    aria-label="Hide details"
    onClick={[Function]}
    size="small"
  >
    <ExpandLessIcon />
  </WithStyles(ForwardRef(IconButton))>
</div>
`;

exports[`Expand cell component renders correctly when not expanded 1`] = `
<div
  aria-sort={null}
  className="MuiTableCell-root test-class MuiTableCell-body"
>
  <WithStyles(ForwardRef(IconButton))
    aria-label="Show details"
    onClick={[Function]}
    size="small"
  >
    <ExpandMoreIcon />
  </WithStyles(ForwardRef(IconButton))>
</div>
`;
